# vocab-trainer

./: .env.example  .gitignore  README.md  debug_filter.py  main.py  netlify.toml  pyproject.toml  requirements.txt
data/raw/: gre_words.txt  topwords
frontend/: .netlifyignore  index.html
frontend/css/: animations.css  styles.css
frontend/data/: words.json
frontend/js/: app.js  audio.js  charts.js  data-loader.js  elo.js  mascot.js  state.js  ui.js
scripts/: convert_csv_to_json.py  demo_quiz.py  init_db.py  preprocess.py
src/: config.py  database.py  session_manager.py
src/definitions/: wordnet_provider.py
src/models/: calibration.py  elo.py
src/preprocessing/: data_loader.py  pipeline.py  word_filter.py
src/quiz/: distractor_generator.py  word_selector.py
tests/: test_models.py
